		Set all graphs to the standard size (0.9.4)
		tiff or png format saving (0.9.3)

	Formatted within graphs to optimise text size and white space

0.10.1 (Uploaded 1/11/22)

	Cropped nox histogram at 99th percentile rather than arbitrarily

	Made graphs use na=0 rather than ignore by default

0.10.2 (Uploaded 1/11/22)

	Made bulk_processor verbose so finding errors is easier

	Changed legend position for faceted plot

0.10.3 (Uploaded 2/11/22)

	Added skipping capacity

	Fixed faceted plots calling only city

0.10.4 (Uploaded 3/11/22)

	Added legend to gradient histogram

0.10.5 (Uploaded 3/11/22)

	Boxplots added to faceted sources

0.10.6 (Uploaded 4/11/22)

	Changed RUC IMD to facets

	Improved legend for nox histogram

0.10.7

	Added focused_plot to make a concise graph for a filtered input (WIP)

	Put focused plot within the london only section of bulk processor (WIP)
0.11.0

	[Busting the ghosts in the machine]

	Speed parameter for bulk processor that enables faster runs by trimming off some functions (0.10.3)

	Made bulk processor say when it starts graphs so problems can be identified easier (0.10.2)

	Added boxplots to faceted_sources (0.10.5)

	Made focused plot to produce a summary of London (0.10.7)

Minor details:

	Improve internal folder structure 

	Check and improve all vignettes

Planned content updates:

	[The pendulum] Time based resolution of data
	
	[The pit] Data separated by different deciles

	[The eye] Use rmd to automate a report with text explaining the figures

QOL updates:

	check the bulk_processor in the city_processor vignette works

	vignettes
		create_prawns

	optimisation: make it so is.raw executes in a single pass rather than two

 	(awkward) add input flexibility, but this is not necessary to the main functionality, the presence of raw renders it obsolete so this not exists to stop you wanting it

	make the tif and csv paths dynamic