@@ -1,6 +1,6 @@
 Package: PRAWNS
 Title: Pollution Raster Analysis with National Statistics
-Version: 0.10.6
+Version: 0.10.7
 Authors@R: 
     person("Nathan", "Gray", , "nrg508@york.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-0338-4965"))
