@@ -19,6 +19,7 @@ export(create_welsh_prawns)
 export(data_flagger)
 export(faceted_plot)
 export(faceted_sources)
+export(focused_plot)
 export(gradient_bar)
 export(graph_saver)
 export(p_values_for_chunks)
