@@ -525,9 +525,11 @@ Major versions (x.0.0) will appear at the top of this document if they are a cur
 
 0.10.7
 
-	Added focused_plot to make a concise graph for a filtered input (WIP)
+	Added focused_plot to make a concise graph for a filtered input
 
-	Put focused plot within the london only section of bulk processor (WIP)
+	Put focused plot within the london only section of bulk processor
+
+	Undid comment shenanigans in faceted sources
 0.11.0
 
 	[Busting the ghosts in the machine]
